test: 구장별 경기 목록 조회 테스트 코드 추가